# ambition3d

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
AmbitionLib/: CMakeLists.txt  library_main.cpp
AmbitionLib/include/ambition/: ambition_api.h  renderTask.h  transform.h  window.h
AmbitionLib/include/ambition/gl/: buffer.h  mesh.h  renderTarget.h  renderer.h  shader.h  texture.h  utils.h
AmbitionLib/include/ambition/logic/: camera.h  component.h  element.h  scene.h
AmbitionLib/include/ambition/logic/components/: mesh_renderer.h
AmbitionLib/include/ambition/logic/drawing/: renderPass.h
AmbitionLib/include/ambition/resources/: address.h  manager.h  mesh.h  resource.h  resources.h  texture.h  type.h
AmbitionLib/src/: transform.cpp
AmbitionLib/src/gl/: buffer.cpp  shader.cpp  texture.cpp  utils.cpp
AmbitionLib/src/logic/: camera.cpp  component.cpp  element.cpp
AmbitionLib/src/resources/: manager.cpp  mesh.cpp  texture.cpp
AmbitionTest/: CMakeLists.txt
AmbitionTest/src/: main.cpp
CoroutineLib/: CMakeLists.txt  cc_task_scheduler.cpp  cc_thread_pool.cpp
CoroutineLib/include/crlib/: cc_queue.h  cc_task.h  cc_task_scheduler.h  cc_thread_pool.h
CoroutineTest/: CMakeLists.txt  CoroutineTest.cpp
